Actions
Bug #10559
closedusbms: cast between incompatible function types
Start date:
2019-03-18
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build error with gcc 8:
../../common/io/usb/clients/usbms/usbms.c:198:2: error: cast between incompatible function types from 'void (*)()' to 'int (*)()' [-Werror=cast-function-type] (int (*)())usbms_rput, /* put procedure not needed */ ^ ../../common/io/usb/clients/usbms/usbms.c:199:2: error: cast between incompatible function types from 'void (*)(queue_t *)' {aka 'void (*)(struct queue *)'} to 'int (*)()' [-Werror=cast-function-type] (int (*)())usbms_rserv, /* service procedure */ ^ cc1: all warnings being treated as errors
With bunch of cstyle fixes...
Updated by Electric Monk about 3 years ago
- % Done changed from 90 to 100
- Status changed from In Progress to Closed
git commit eae92bf6733b3ea3e31cbc60517fcd64f892fa99
commit eae92bf6733b3ea3e31cbc60517fcd64f892fa99 Author: Toomas Soome <tsoome@me.com> Date: 2019-04-05T05:44:55.000Z 10559 usbms: cast between incompatible function types Reviewed by: Andy Fiddaman <andy@omniosce.org> Approved by: Dan McDonald <danmcd@joyent.com>
Actions